@@ -4,6 +4,8 @@
 |                                                           |
  ===========================================================
 
+enlever Makefile de CVS
+
  ===========================================================
 |                                                           |
 |                          BUGS                             |
