@@ -579,3 +579,4 @@ scid-3.6.26
 - Play on internet : a digital clock is displayed inside the analog clock (seems required for blitz games)
 - Windows release : Tcl/Tk is upgraded to version 8.5, so latest piece sets (with transparency effects) are correctly displayed
 - Fix : Scid could crash when generating an opening report from a huge base from particular positions. Bug introduced with Scid 3.6.21 and fixed now (buffer overflow due to moves translation in OpLine::PrintMove)
+- Pocket PC : workaround to handle engines like Greko that does not output a correct number for a mate.
